Header qismi qo'shildi

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Traffic Rules</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="index.html"><img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
+        <ul>
+            <li><a href="index.html">Bosh sahifa</a></li>
+            <li><a href="#">Boshlang'ich tushunchalar</a></li>
+            <li><a href="#">Yo'l Belgilar</a></li>
+            <li><a href="#">Harakatlanish qoidalari</a></li>
+            <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
+            <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
+        </ul>
+    </header>
 
 </body>
 </html>
