--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
+        <a href="index.html">
+            <img src="https://placehold.co/100x80?text=Site+logo" arasmlt="logo" width="100" height="80"></a>
         <ul>
             <li><a href="index.html">Bosh sahifa</a></li>
             <li><a href="#">Boshlang'ich tushunchalar</a></li>
@@ -18,6 +19,22 @@
             <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
         </ul>
     </header>
+
+    <main>
+        <div class="container">
+            <h1>Yo'l belgilari</h1>
+
+            <img src="https://picsum.photos/300/300?random=1" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=2" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=3" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=4" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=5" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=6" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=7" width="300" height="300" alt="rasm">
+            <img src="https://picsum.photos/300/300?random=8" width="300" height="300" alt="rasm">
+        </div>
+    </main>
+
 
 </body>
 </html>
