--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="https://placehold.co/100x80?text=Site+logo" arasmlt="logo" width="100" height="80"></a>
+            <img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
         <ul>
             <li><a href="index.html">Bosh sahifa</a></li>
             <li><a href="#">Boshlang'ich tushunchalar</a></li>
@@ -34,7 +34,17 @@
             <img src="https://picsum.photos/300/300?random=8" width="300" height="300" alt="rasm">
         </div>
     </main>
-
+    <footer>
+        <a href="index.html">
+            <img src="https://placehold.co/1200x100?text=Site+footer" alt="logo" width="1200" height="100"></a>
+        <ul>
+            <li><a href="index.html">Bosh sahifa</a></li>
+            <li><a href="#">Boshlang'ich tushunchalar</a></li>
+            <li><a href="#">Yo'l Belgilar</a></li>
+            <li><a href="#">Harakatlanish qoidalari</a></li>
+            <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
+            <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
+    </footer>
 
 </body>
 </html>
