--- a/index.html
+++ b/index.html
@@ -5,47 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Rules</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">
-            <img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
-        <ul>
-            <li><a href="index.html">Bosh sahifa</a></li>
-            <li><a href="#">Boshlang'ich tushunchalar</a></li>
-            <li><a href="#">Yo'l Belgilar</a></li>
-            <li><a href="#">Harakatlanish qoidalari</a></li>
-            <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
-            <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
-        </ul>
-    </header>
 
-    <main>
-        <div class="container">
-            <h1>Yo'l belgilari</h1>
+    <div class="container mt-5">
 
-            <img src="https://picsum.photos/300/300?random=1" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=2" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=3" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=4" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=5" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=6" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=7" width="300" height="300" alt="rasm">
-            <img src="https://picsum.photos/300/300?random=8" width="300" height="300" alt="rasm">
-        </div>
-    </main>
-    <footer>
-        <a href="index.html">
-            <img src="https://placehold.co/1200x100?text=Site+footer" alt="logo" width="1200" height="100"></a>
-        <ul>
-            <li><a href="index.html">Bosh sahifa</a></li>
-            <li><a href="#">Boshlang'ich tushunchalar</a></li>
-            <li><a href="#">Yo'l Belgilar</a></li>
-            <li><a href="#">Harakatlanish qoidalari</a></li>
-            <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
-            <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
-        </ul>
-    </footer>
+        <header class="mt-4">
+            <a href="index.html">
+                <img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
+            <nav class="navigation">
+                <ul class="nav-list text-uppercase">
+                    <li class="nav-item"><a href="index.html">Bosh sahifa</a></li>
+                    <li class="nav-item"><a href="#">Boshlang'ich tushunchalar</a></li>
+                    <li class="nav-item"><a href="#">Yo'l Belgilar</a></li>
+                    <li class="nav-item"><a href="#">Harakatlanish qoidalari</a></li>
+                    <li class="nav-item"><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
+                    <li class="nav-item"><a href="#">Avtotransport vositalari tuzilishi</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <main>
+            <div class="container">
+                <h1>Yo'l belgilari</h1>
+
+                <img src="https://picsum.photos/300/300?random=1" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=2" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=3" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=4" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=5" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=6" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=7" width="300" height="300" alt="rasm">
+                <img src="https://picsum.photos/300/300?random=8" width="300" height="300" alt="rasm">
+            </div>
+        </main>
+        <footer>
+            <a href="index.html">
+                <img src="https://placehold.co/1200x100?text=Site+footer" alt="logo" width="1200" height="100"></a>
+            <ul>
+                <li><a href="index.html">Bosh sahifa</a></li>
+                <li><a href="#">Boshlang'ich tushunchalar</a></li>
+                <li><a href="#">Yo'l Belgilar</a></li>
+                <li><a href="#">Harakatlanish qoidalari</a></li>
+                <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
+                <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
+            </ul>
+        </footer>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
