--- a/index.html
+++ b/index.html
@@ -6,30 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Rules</title>
 
+    <link rel="stylesheet" href="css/styles.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
 </head>
 <body>
 
-    <div class="container mt-5">
-
-        <header class="mt-4">
-            <a href="index.html">
-                <img src="https://placehold.co/100x80?text=Site+logo" alt="logo" width="100" height="80"></a>
+    <div class="container mt-3">
+        <header class="main-header">
+            <a class="logo-link rounded" href="index.html">
+                <img class="header-logo rounded-circle" src="https://placehold.co/100x100?text=Site+logo" alt="logo" width="100" height="80">
+            </a>
             <nav class="navigation">
                 <ul class="nav-list text-uppercase">
-                    <li class="nav-item"><a href="index.html">Bosh sahifa</a></li>
-                    <li class="nav-item"><a href="#">Boshlang'ich tushunchalar</a></li>
-                    <li class="nav-item"><a href="#">Yo'l Belgilar</a></li>
-                    <li class="nav-item"><a href="#">Harakatlanish qoidalari</a></li>
-                    <li class="nav-item"><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
-                    <li class="nav-item"><a href="#">Avtotransport vositalari tuzilishi</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="index.html">Bosh sahifa</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="general-rules.html">Umumiy qoidalar</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Ilovalar</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Jarimalar</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Boshqalar</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Biz bilan aloqa</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <div class="container">
-                <h1>Yo'l belgilari</h1>
+            <div class="text-bg-light">
+                <h1 class="text-success text-bg-light">Yo'l harakati qoidalari haqida</h1>
+                <p class="text-muted ">O‘zbekiston Respublikasi mustaqillikka erishgandan so‘ng
+                    ijtimoiy-iqtisodiy va siyosiy o‘zgarishlar hayotga izchil joriy etila
+                    boshlandi. Respublikaning bozor iqtisodiyotiga o‘tib borishi, xususiy
+                    mulkchilik va avtomobil sanoatining vujudga kelishi, chet ellar bilan
+                    teng huquqli iqtisodiy aloqalarning yo‘lga qo‘yilishi, fuqarolarning
+                    moddiy farovonligi ortib borishi tabiiy ravishda avtomobil yo‘llarida
+                    va shahar ko‘chalarida harakat miqdorining (yangi tayyorlanayotgan
+                    haydovchilar hisobiga) ortib borishiga olib kelyapti. Bir paytlar
+                    respublika bo‘yicha har 1000 nafar aholiga 35 dona yengil avtomobil
+                    to‘g‘ri kelgan bo‘lsa, bugungi kunda bu ko‘rsatkich yanada ortib
+                    boryapti. Hozirda Toshkent shahri va viloyatining o‘zida har 1000
+                    nafar aholiga 100 donadan ko‘p yengil avtomobil to‘g‘ri kelyapti.
+                    Bu ko‘rsatkichga hozirda foydalanilayotgan yuk avtomobillari va
+                    avtobuslarning miqdori qo‘shilsa, aholining ma’lum bir qismini va
+                    ularning yuklarini xususiy tashuvchilar tashiyotganini hisobga olinsa,
+                    sodir etilayotgan yo‘l-transport hodisalarining 75% haydovchilarning
+                    aybi bilan sodir etilayotganini e’tiborga olinsa, haydovchilarni
+                    tayyorlash va qayta tayyorlash masalasi – eng dolzarb masala ekanini
+                    ko‘rish mumkin.
+                    Ushbu o‘quv qo‘llanma yuqoridagi masalani hal etishga
+                    qaratilgan dastlabki qadam bo‘lib, unda avtomobillarni boshqarish
+                    jihozlaridan foydalanish texnikasi, avtomobillarni har xil yo‘l
+                    sharoitlarida xavfsiz boshqarish asoslari, yo‘l-transport hodisalari,
+                    ularning turlari va tahlili, avtotransport korxonalarida harakat
+                    xavfsizligini ta’minlash kabi masalalar ko‘rib chiqilgan.</p>
 
                 <img src="https://picsum.photos/300/300?random=1" width="300" height="300" alt="rasm">
                 <img src="https://picsum.photos/300/300?random=2" width="300" height="300" alt="rasm">
@@ -41,16 +68,16 @@
                 <img src="https://picsum.photos/300/300?random=8" width="300" height="300" alt="rasm">
             </div>
         </main>
-        <footer>
+        <footer class="mt-5">
             <a href="index.html">
                 <img src="https://placehold.co/1200x100?text=Site+footer" alt="logo" width="1200" height="100"></a>
-            <ul>
-                <li><a href="index.html">Bosh sahifa</a></li>
-                <li><a href="#">Boshlang'ich tushunchalar</a></li>
-                <li><a href="#">Yo'l Belgilar</a></li>
-                <li><a href="#">Harakatlanish qoidalari</a></li>
-                <li><a href="#">Birinchi tibbiy yordam ko'rsatish</a></li>
-                <li><a href="#">Avtotransport vositalari tuzilishi</a></li>
+            <ul class="text-uppercase mt-3">
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="index.html">Bosh sahifa</a></li>
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Umumiy qoidalar</a></li>
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Ilovalar</a></li>
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Jarimalar</a></li>
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Boshqalar</a></li>
+                <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Biz bilan aloqa</a></li>
             </ul>
         </footer>
 </div>
