--- a/harakatlanishni_boshlash.html
+++ b/harakatlanishni_boshlash.html
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <ul class="nav-list text-uppercase">
                     <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="index.html">Bosh sahifa</a></li>
-                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Umumiy qoidalar</a></li>
+                    <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="general-rules.html">Umumiy qoidalar</a></li>
                     <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Ilovalar</a></li>
                     <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Jarimalar</a></li>
                     <li class="nav-item btn btn-warning"><a class="text-success nav-item-link" href="#">Boshqalar</a></li>
@@ -40,6 +40,23 @@
                 <li><a href="#" class="">Svetofor va tartibga soluvchining ishoralari</a></li>
                 <li><a href="#" class="">Ogohlantiruvchi va avariya (xavf-xatar) ishoralari</a></li>
                 <li><a href="harakatlanishni_boshlash.html" class="">Harakatlanishni boshlash, manyovr qilish</a></li>
+                    <p><b>53.</b> Haydovchi harakatni boshlash, manyovr qilish (qayta tizilish, burilish, qayrilib olish, quvib o'tish va aylanib o'tish) va to'xtashdan oldin
+                     bajarilayotgan manyovr boshqa yo'l harakati qatnashchilarini harakatlanishiga xavf
+                    tug'dirmasligi kerakligi kerak.</p>
+                    <!-- style="border: 1px solid red; overflow: auto;"> -->
+                    <p style="overflow: auto;"><b>54.</b> <img src="images/9-bob/9-yondosh-hudud.png" alt="rasm" width="300" height="200" style="float:right; clear:right;"> Haydovchi yondosh hududdan yo'lga chiqayotganda unda harakatlanayotgan piyodalar va transport vositalariga, shuningdek, yo'ldan chiqishda harakatlanish yo'lagini kesib o'tayotgan
+                     piyodalar va velosipedchilarga yo'l berishi kerak.
+                    </p>
+                    <!-- style="overflow: auto;" -->
+                    <p style="overflow: auto;"><b>55.</b>
+                    <img style="float:right;margin: 0 5px;" src="images/9-bob/qayta-tizilish1.png" width="300" height="200" alt="qayta-tizilish1">
+                    <img style="float:right;" src="images/9-bob/qayta-tizilish2.png" alt="qayta-tizilish2" width="300" height="200">
+                        Haydovchi qayta tizilishda harakatlanish yo'nalishini o'zgartirmasdan harakatlanayotgan transport vositalariga yo'l berishi kerak.
+                    Bir yo'nalishda harakatlanayotgan transport vositalari bir vaqtda qayta tizilayotganda, haydovchi o'ng tomondagi transport vositasiga yo'l berishi kerak.</p>
+                    <p><b>56.</b> Aylanma harakat tashkil etilgan chorrahalarga kirish uchun burilishdan boshqa barcha hollarda, haydovchi o'nga, chapga burilishi yoki qayrilib olishidan oldinroq shu yo'nalishda harakatlanishi uchun mo'ljallangan
+                     qatnov qismining eng chetki holatini egallashi shart.</p>
+
+
                 <li><a href="#" class="">Yo'lning qatnov qismida transport vositalarining joylashuvi</a></li>
                 <li><a href="#" class="">Harakatlanish tezligi</a></li>
                 <li><a href="#" class="">Quvib o'tish</a></li>
