--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
 
-        <main>
+        <main class="">
             <div class="text-bg-light">
                 <h1 class="text-success text-bg-light">Yo'l harakati qoidalari haqida</h1>
                 <p class="text-muted ">O‘zbekiston Respublikasi mustaqillikka erishgandan so‘ng
