quvib o'tish bolimi qoshildi

--- a/general-rules.html
+++ b/general-rules.html
@@ -42,7 +42,7 @@
                 <li><a href="harakatlanishni_boshlash.html" class="">Harakatlanishni boshlash, manyovr qilish</a></li>
                 <li><a href="#" class="">Yo'lning qatnov qismida transport vositalarining joylashuvi</a></li>
                 <li><a href="#" class="">Harakatlanish tezligi</a></li>
-                <li><a href="#" class="">Quvib o'tish</a></li>
+                <li><a href="quvib-otish.html" class="">Quvib o'tish</a></li>
                 <li><a href="#" class="">To'xtash va to'xtab turish</a></li>
                 <li><a href="#" class="">Chorrahalarda harakatlanish</a></li>
                 <li><a href="#" class="">Tartibga solingan chorrahalar</a></li>
