--- a/quvib-otish.html
+++ b/quvib-otish.html
@@ -40,25 +40,30 @@
                 <li><a href="#" class="">Svetofor va tartibga soluvchining ishoralari</a></li>
                 <li><a href="#" class="">Ogohlantiruvchi va avariya (xavf-xatar) ishoralari</a></li>
                 <li><a href="harakatlanishni_boshlash.html" class="">Harakatlanishni boshlash, manyovr qilish</a></li>
-                    <p><b>53.</b> Haydovchi harakatni boshlash, manyovr qilish (qayta tizilish, burilish, qayrilib olish, quvib o'tish va aylanib o'tish) va to'xtashdan oldin
-                     bajarilayotgan manyovr boshqa yo'l harakati qatnashchilarini harakatlanishiga xavf
-                    tug'dirmasligi kerakligi kerak.</p>
-                    <!-- style="border: 1px solid red; overflow: auto;"> -->
-                    <p style="overflow: auto;"><b>54.</b> <img src="images/9-bob/9-yondosh-hudud.png" alt="rasm" width="300" height="200" style="float:right; clear:right;"> Haydovchi yondosh hududdan yo'lga chiqayotganda unda harakatlanayotgan piyodalar va transport vositalariga, shuningdek, yo'ldan chiqishda harakatlanish yo'lagini kesib o'tayotgan
-                     piyodalar va velosipedchilarga yo'l berishi kerak.
-                    </p>
-                    <!-- style="overflow: auto;" -->
-                    <p style="overflow: auto;"><b>55.</b>
-                    <img style="float:right;margin: 0 5px;" src="images/9-bob/qayta-tizilish1.png" width="300" height="200" alt="qayta-tizilish1">
-                    <img style="float:right;" src="images/9-bob/qayta-tizilish2.png" alt="qayta-tizilish2" width="300" height="200">
-                        Haydovchi qayta tizilishda harakatlanish yo'nalishini o'zgartirmasdan harakatlanayotgan transport vositalariga yo'l berishi kerak.
-                    Bir yo'nalishda harakatlanayotgan transport vositalari bir vaqtda qayta tizilayotganda, haydovchi o'ng tomondagi transport vositasiga yo'l berishi kerak.</p>
-                    <p><b>56.</b> Aylanma harakat tashkil etilgan chorrahalarga kirish uchun burilishdan boshqa barcha hollarda, haydovchi o'nga, chapga burilishi yoki qayrilib olishidan oldinroq shu yo'nalishda harakatlanishi uchun mo'ljallangan
-                     qatnov qismining eng chetki holatini egallashi shart.</p>
-
                 <li><a href="#" class="">Yo'lning qatnov qismida transport vositalarining joylashuvi</a></li>
                 <li><a href="#" class="">Harakatlanish tezligi</a></li>
-                <li><a href="quvib-otish.html" class="">12-BOB. Quvib o'tish</a></li>
+                <li><a href="quvib-otish.html" class="">12-BOB.Quvib o'tish</a></li>
+                    <p>Quvib o'tish bir yoki bir nechta transport vosilarini qarama-qarshi yo'nalishda harakatlanish uchun mo'ljallangan tasmaga chiqib, so'ngra ilgari egallagan qatoriga qaytib o'tish bilan bog'liq bo'lgan
+                        o'zib ketish.
+                    </p>
+                    <ul><b>Haydovchi quvib o'tishni amalga oshirishdan oldin chapga burilish ishorasini yoqib:</b>
+                        <li>o'zi o'tmoqchi bo'lgan harakatlanish bo'lagi yetarli darajada bo'sh ekanligiga ishonch hosil qilishi</li>
+                        <li>quvib o'tish jarayonida harakatlanishga xavf tug'dirmasligiga va boshqa harakat ishtirokchilariga xalaqit bermasligiga</li>
+                        <li>shu tasmada orqada harakatlanayotgan transport vositasi quvib o'tishni boshlamaganligiga</li>
+                        <li>oldida harakatlanayotgan transport vositasi chapga burilish, quvib o'tish ishorasini bermaganligiga</li>
+                        <li>quvib o'tishni tugallayotganda quvib o'tilayotgan transport vositasiga halaqit bermasdan ilgari egallagan qatoriga qaytib o'ta olishiga ishonchi komil bo'lishi shart</li>
+                     </ul>
+
+                     <ul><b>Quyidagi hollarda quvib o'tish taqiqlanadi:</b>
+                        <li>tartibga solingan chorrahalarda qarama-qarshi yo'nalishga chiqib;</li>
+                        <li>tartibga solinmaydigan chorrahalarda asosiy bo'lmagan yo'lda harakatlanish vaqtida;</li>
+                        <li>ko'priklarda, yo'l o'tkazgichlarda, estakadalarda va ularning ostida;</li>
+                        <li>piyodalar o'tish joylarida piyodalar bo'lgan vaqtda;</li>
+                        <li>temir yo'l kesishmalarida va ularga 100 metrdan kam masofa qolganda;</li>
+                        <li>quvib yoki aylanib o'tayotgan transport vositalarini quvib o'tish;</li>
+                        <li>tepalikning oxiri va yo'lning ko'rinishi cheklangan joylarida;</li>
+                        <li>3.20 va 3.22 belgilari ta'sir oralig'ida;</li>
+                     </ul>
                 <li><a href="#" class="">To'xtash va to'xtab turish</a></li>
                 <li><a href="#" class="">Chorrahalarda harakatlanish</a></li>
                 <li><a href="#" class="">Tartibga solingan chorrahalar</a></li>
