--- a/general-rules.html
+++ b/general-rules.html
@@ -31,7 +31,7 @@
 
         <main>
             <ul>
-                <li><a href="#" class="">Umumiy qoidalar</a></li>
+                <li><a href="general-rules.html" class="">Umumiy qoidalar</a></li>
                 <li><a href="#" class="">Haydovchilarning umumiy vazifalari</a></li>
                 <li><a href="#" class="">Yo'l transport hodisasi sodir bo'lganda haydovchining majburiyatlari</a></li>
                 <li><a href="#" class="">Piyodalarning majburiyatlari</a></li>
@@ -42,7 +42,7 @@
                 <li><a href="harakatlanishni_boshlash.html" class="">Harakatlanishni boshlash, manyovr qilish</a></li>
                 <li><a href="#" class="">Yo'lning qatnov qismida transport vositalarining joylashuvi</a></li>
                 <li><a href="#" class="">Harakatlanish tezligi</a></li>
-                <li><a href="quvib-otish.html" class="">Quvib o'tish</a></li>
+                <li><a href="quvib-otish.html" class="">12-BOB. Quvib o'tish</a></li>
                 <li><a href="#" class="">To'xtash va to'xtab turish</a></li>
                 <li><a href="#" class="">Chorrahalarda harakatlanish</a></li>
                 <li><a href="#" class="">Tartibga solingan chorrahalar</a></li>
