to'xtash va to'xtab turish bandlari qo'shildi

--- a/quvib-otish.html
+++ b/quvib-otish.html
@@ -64,7 +64,7 @@
                         <li>tepalikning oxiri va yo'lning ko'rinishi cheklangan joylarida;</li>
                         <li>3.20 va 3.22 belgilari ta'sir oralig'ida;</li>
                      </ul>
-                <li><a href="#" class="">To'xtash va to'xtab turish</a></li>
+                <li><a href="toxtash_va_toxtab_turish.html" class="">13-BOB. To'xtash va to'xtab turish</a></li>
                 <li><a href="#" class="">Chorrahalarda harakatlanish</a></li>
                 <li><a href="#" class="">Tartibga solingan chorrahalar</a></li>
                 <li><a href="#" class="">Tartibga solinmagan chorrahalar</a></li>
