--- a/toxtash_va_toxtab_turish.html
+++ b/toxtash_va_toxtab_turish.html
@@ -43,7 +43,39 @@
                 <li><a href="#" class="">Yo'lning qatnov qismida transport vositalarining joylashuvi</a></li>
                 <li><a href="#" class="">Harakatlanish tezligi</a></li>
                 <li><a href="quvib-otish.html" class="">12-BOB. Quvib o'tish</a></li>
-                <li><a href="toxtash_va_toxtab_turish.html" class="">13-BOB. To'xtash va to'xtab turish</a></li>
+                <li><a href="toxtash_va_toxtab_turish.html" class="">To'xtash va to'xtab turish</a></li>
+                    <h3>To'xtash</h3>
+                    <p>- transport vositasi harakatini 10 daqiqagacha bo'lgan muddatgacha to'xtatish.</p>
+                    <h3>To'xtab turish</h3>
+                    <p>- transport vositasiga yo'lovchilarni chiqarish yoki tushirish, yuk ortish yoki tushirish bilan bog'liq bo'lmagan hollarda harakatini 10 daqiqadan ko'proq
+                        vaqtga to'xtatish.
+                    </p>
+                    <p>Transport vositalariga yo'lning o'ng tomonida yo'lning yoqasida, u bo'lmaganda esa qatnov qismining chetida Qoidalarning 89-bandida ko'rsatilgan hollarda trotuarda to'xtash va to'xtab turishga
+                        ruxsat etiladi.
+                    </p>
+                    <p>Qatnov qismiga chegaradosh trotuar chetida faqat yengil avtomobillar, mototsikllar, mopedlar va velosipedlarga to'xtab turishga 5.15 yo'l belgisi o'rnatilgan
+                        joylarda ruxsat etiladi.
+                    </p>
+                    <h3>Quyidagi hollarda to'xtash taqiqlanadi:</h3>
+                    <ul>
+                        <li>tramvay yo'llarida, shuningdek, ularga yaqinroqda bevosita halaqit beradigan hollarda;</li>
+                        <li>temir yo'l kesishmalarida;</li>
+                        <li>tunellarda;</li>
+                        <li>bir yo'nalishda 3 tadan kam bo'lgan harakatlanish tasmasi bo'lgan ko'prik, yo'l o'tkazgich va estakadalarning ustida;</li>
+                        <li>ko'prik, yo'l o'tkazgich va estakadalarning ostida;</li>
+                        <li>yo'lning qatnov qismida;</li>
+                        <li>to'xtagan transport vositasi bilan sidirg'a chiziq (yo'l chetidagidan tashqari) o'rtasidagi masofa 3 metrdan kam bo'lganda;</li>
+                        <li>piyodalarning o'tish joylarida va ularga 10 metrdan kam masofa qolganda;</li>
+                        <li>velosiped yo'lkasi bilan kesishuvda va ularga 10 metrdan kam masofa qolganda;</li>
+                        <li>velosipedchilar uchun tasmada (odam tushirish va odam mindirish bundan mustasno);</li>
+                        <li>qatnov qismida ko'rinishi 100 metrdan kam bo'lgan xavfli burilishlarda;</li>
+                        <li>qatnov qismi kesishmalarida va kesishayotgan qatnov qismi chetiga 30 metrdan kam masofada;</li>
+                        <li>bekat maydonchalarida, yo'nalishli transport vositalari to'xtash joylarida, 1.17 chizig'i bilan belgilangan joylarda, bekatlarga yetmasdan va o'tib 15 metr masofadan kam oraliqda (yo'nalishli
+                            transport vositalariga halaqit bermasa odam tushirish va chiqarish hollari bundan mustasno);</li>
+                        <li>svetofor ishorasi va boshqa belgilarni to'sib qo'yib boshqa harakat qatnashchilariga halaqit beradigan kirib-chiqishiga imkon bermaydigan joylarda;</li>
+                        <li>transport vositalari qayrilib oladigan joylarda, undan oldin yoki o'tib 30 metrdan kam masofa qolganda;</li>
+                        <li>3.27 va 1.4 chizig'i ta'sir oralig'ida;</li>
+                    </ul>
                 <li><a href="#" class="">Chorrahalarda harakatlanish</a></li>
                 <li><a href="#" class="">Tartibga solingan chorrahalar</a></li>
                 <li><a href="#" class="">Tartibga solinmagan chorrahalar</a></li>
